log/build_2024-12-14_13-31-35/cs1651_drone/stderr.log
  File "/home/chondosha/ros2_ws/install/cs1651_drone/lib/python3.12/site-packages/cs1651_drone/drone_node.py", line 214
    break
    ^^^^^
SyntaxError: 'break' outside loop

